@@ -21,6 +21,7 @@ Fixes:
    * Add missing files in the tarball.
    * Add svg rendering with Esvg
    * Don't accept broken map.
+   * Fix garbage left by mapped smart object when they fly away from the canvas.
 
 Removal:
    * Remove EVAS_FRAME_QUEUING, EVAS_SLI, METRIC_CACHE and WORD_CACHE.
