@@ -884,3 +884,8 @@
 2012-07-16  Hermet (ChunEon Park)
 
 	* Fixed to do pre render for the children of mapped object.
+
+2012-07-17  Cedric Bail
+
+	* Fix garbage left by mapped smart object when they fly away from the canvas.
+
